--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,24 @@
-    header{
-        overflow: hidden;
-        background-color: #d4d4d4 ;
-        padding: 20px 10px;
-        font-size: 1.2em;
-        color: black;
+body {
+    margin: 0%;
+}
 
-    }
+header {
+    display: flex;
+    overflow: hidden;
+    background-color: #d4d4d4;
+    padding: 3px 2px;
+    font-size: 1.2em;
+    color: black;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
 
-header a{
+header h1 {
+    margin-left: 5%;
+}
+
+header a {
     float: left;
     color: black;
     text-align: center;
@@ -19,21 +30,25 @@ header a{
 
 }
 
-header a:hover{
+header a:hover {
     background-color: #ddd;
     color: black;
 }
 
+header ul {
+    display: flex;
+    list-style: none;
+}
 
-    main {
-        padding: 3em 2em;
-        margin: 1em 1em;
-        text-align: center;
-        font-size: 1.25em;
-        line-height: 1em;
-        }
+main {
+    padding: 3em 2em;
+    margin: 1em 1em;
+    text-align: center;
+    font-size: 1.25em;
+    line-height: 1em;
+}
 
-main a{
+main a {
     padding: 0.25em;
     color: black;
     font-size: 0.5em;
@@ -41,10 +56,35 @@ main a{
 }
 
 
-    footer {
-        padding: 3em 2em;
-        margin: 1em 1em;
-        text-align: center;
-        font-size: 1.25em;
-        line-height: 1em;
-    }
+footer {
+    display: flex;
+    overflow: hidden;
+    background-color: #d4d4d4;
+    padding: 3px 2px;
+    font-size: 1.2em;
+    color: black;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+footer ul {
+    display: flex;
+    list-style: none;
+}
+
+footer a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 0.25em;
+    text-decoration: none;
+    font-size: 1.2em;
+    line-height: 0.75em;
+    border-radius: 4px;
+}
+
+footer a:hover {
+    background-color: #ddd;
+    color: black;
+}
