--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -80,6 +80,14 @@ body {
     margin: 20px;
 }
 
+/*slides*/
+#prin_news {
+    height: 265px; 
+    margin: 2px 2px 2px 2px; 
+    background-color: black;
+    width: 60%;
+}
+
 /*Notícias*/
 .recent_news-1 {
     display: flex;
@@ -90,7 +98,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 150%;
     flex-direction: column;
     background-color: black;
     color: white;
@@ -112,7 +120,8 @@ body {
 
 /*Formularios*/
 #form_contact-1 {
-    background-color: gray;
+    border: 2px solid black;
+    border-radius: 2%;
     padding: 5px;
     width: 35%;
     max-height: 250px;
