--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,90 +1,178 @@
 body {
+    display: flex;
+    flex-direction: column;
     margin: 0%;
+    min-height: 100vh;
 }
 
-header {
+/*Header*/
+#header {
     display: flex;
     overflow: hidden;
-    background-color: #d4d4d4;
+    background-color: #262626;
     padding: 3px 2px;
     font-size: 1.2em;
-    color: black;
+    color: #d9d9d9;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 }
-
-header h1 {
-    margin-left: 5%;
+#header h1 {
+    margin: 0 0 0 5%;
 }
-
-header a {
+#header a {
+    margin-right: 10px;
     float: left;
-    color: black;
     text-align: center;
     padding: 0.25em;
     text-decoration: none;
     font-size: 1.2em;
     line-height: 0.75em;
     border-radius: 4px;
-
+    color: #d9d9d9;
 }
-
-header a:hover {
+#header a:hover {
     background-color: #ddd;
     color: black;
 }
-
-header ul {
+#header ul {
     display: flex;
     list-style: none;
 }
 
-main {
-    padding: 3em 2em;
-    margin: 1em 1em;
-    text-align: center;
-    font-size: 1.25em;
-    line-height: 1em;
-}
-
-main a {
-    padding: 0.25em;
-    color: black;
-    font-size: 0.5em;
-    line-height: 0.5em;
-}
-
-
-footer {
+/*footer*/
+#footer{
     display: flex;
     overflow: hidden;
-    background-color: #d4d4d4;
+    background-color: #262626;
     padding: 3px 2px;
     font-size: 1.2em;
-    color: black;
-    justify-content: space-between;
+    color: #d9d9d9;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin-top: auto;
 }
-
-footer ul {
-    display: flex;
-    list-style: none;
-}
-
-footer a {
+#footer a {
+    margin: 0 10px 0 10px;
     float: left;
-    color: black;
     text-align: center;
     padding: 0.25em;
     text-decoration: none;
     font-size: 1.2em;
     line-height: 0.75em;
     border-radius: 4px;
+    color: #d9d9d9;
 }
-
-footer a:hover {
+#footer a:hover {
     background-color: #ddd;
     color: black;
+}
+#footer ul {
+    display: flex;
+    list-style: none;
+}
+
+
+/*Containers*/
+.content-1 {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+#main_2 {
+    margin: 1%;
+    padding: 0.5%;
+    background-color: #e3e3e3;
+    border-radius: 5px;
+    border: 2px solid gray;
+}
+
+/*slides*/
+#prin_news {
+    height: 265px; 
+    margin: 2px 2px 2px 2px; 
+    background-color: black;
+    width: 60%;
+}
+
+/*Notícias*/
+.recent_news-1 {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+/*Cards de Notícias*/
+.news_card-1 {
+    margin: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    flex-direction: column;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    border-radius: 10px;
+    margin-bottom: 5px;
+}
+.news_card-1:hover{
+    background-color: #262626;
+    text-decoration: underline;
+}
+.news_card-1 img{
+    border-radius: 10px 10px 0 0;
+}
+.news_card-1 a{
+    color: white;
+    text-decoration: none;
+}
+
+/*Formularios*/
+#form_contact-1 {
+    border: 2px solid black;
+    border-radius: 2%;
+    padding: 5px;
+    width: 35%;
+    max-height: 250px;
+}
+#form_contact-1 form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: white;
+    padding: 5px;
+    min-height: 240px;
+}
+.input-1{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+.input-1 input {
+    padding: 10px;
+    outline: none;
+    border: 1px solid #0000004f;
+    border-radius: 5px;
+}
+.button-1{
+    padding: 10px;
+    background-color: #00a6ff;
+    color: white;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.button-1:hover{
+    background-color: rgb(0, 146, 224);
+}
+
+/*Text*/
+h3 {
+    margin: 10px;
 }
